<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".Activity.MainActivity"
    android:background="#00BCD4">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/back_button"
        android:contentDescription="@string/welcome_back" />

    <TextView
        android:id="@+id/text_login"
        android:layout_below="@id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="45dp"/>

    <TextView
        android:id="@+id/text_login2"
        android:layout_below="@id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missed_u"
        android:textColor="#FFFFFF"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/input_email_login"
        android:layout_below="@id/text_login2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="16sp"
        android:hint="@string/Email"
        android:textColorHint="#CFF0FF"
        android:background="@drawable/shape_edittext"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/input_password_login"
        android:layout_below="@id/input_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="16sp"
        android:hint="@string/Password"
        android:textColorHint="#CFF0FF"
        android:background="@drawable/shape_edittext"
        android:inputType="textPassword"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/lupa_password_login"
        android:layout_below="@+id/input_password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_Password"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        android:textStyle="bold|italic"
        android:textSize="14sp"/>


    <android.widget.Button
        android:id="@+id/login_button_login"
        android:layout_above="@id/signup_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/Login"
        android:textColor="#ffff"
        android:background="@drawable/shape_green"
        android:layout_marginBottom="12dp"/>

    <android.widget.Button
        android:id="@+id/signup_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/signup"
        android:textColor="#000000"
        android:background="@drawable/shape_white"/>

</RelativeLayout>